fixed overflow issue on mobile

--- a/src/components/HomePage/HomePage.module.css
+++ b/src/components/HomePage/HomePage.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
-  overflow-y: hidden;
 }
 
 .link-container {
